# shortlist

./: .dockerignore  .gitignore  CLAUDE.md  CONSTRAINTS.md  DECISIONS.md  Dockerfile  INTENT.md  PROJECT_LOG.md  README.md  alembic.ini  fly.toml  pyproject.toml  requirements.txt  start.sh  supervisord.conf
.claude/: settings.local.json
alembic/: env.py
config/: profile.yaml
docs/: WEB_UI_PLAN.md
scripts/: ab_test_aww.py  ab_test_results.json  backfill_prestige.py  check_constraints.py  eval_career_page.py  parse_career_pages.py  posthog_report.py  resolve_direct_ats.py  seed_career_pages.py
shortlist/: aww_client.py  aww_crypto.py  brief.py  cli.py  config.py  db.py  expiry.py  http.py  llm.py  pgdb.py  pipeline.py  scheduler.py
tests/: test_aww_client.py  test_aww_crypto.py  test_brief.py  test_career_page.py  test_career_page_sources.py  test_cli.py  test_collectors.py  test_config.py  test_cover_letter.py  test_curated_sources_pipeline.py  test_currency_e2e.py  test_db.py  test_enricher.py  test_expiry.py  test_filter.py  test_filter_is_listed.py  test_filter_location_sanity.py  test_http.py  test_job_closed.py  test_job_expiry.py  test_job_prestige.py  test_job_status_schema.py  test_latex_compiler.py  test_linkedin.py  test_llm.py  test_memory_efficiency.py  test_nextplay.py  test_nextplay_leadership_filter.py  test_pgdb.py  test_pipeline.py  test_pipeline_efficiency.py  test_pipeline_title_gate.py  test_region_sync.py  test_resume.py  test_scheduler.py  test_scorer.py  test_store.py  test_title_gate.py  test_worker_aww.py  test_worker_config.py
web/: DESIGN.md  next.config.ts  (+3 more)
(+128 files in other folders)
